--- a/banana_man/CMakeLists.txt
+++ b/banana_man/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_library(bmanlib
-    
+    bmanlib/bman/bman.cpp
+    bmanlib/game/game.cpp
+    bmanlib/platforms/platform.cpp
 )
 
 find_package(raylib 3.0 REQUIRED)
