we can make maps with strings

--- a/banana_man/CMakeLists.txt
+++ b/banana_man/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(bmanlib
     bmanlib/bman/bman.cpp
     bmanlib/game/game.cpp
     bmanlib/platforms/platform.cpp
+    bmanlib/platforms/grid.cpp
 )
 
 find_package(raylib 3.0 REQUIRED)
