lasers go pew pew

--- a/banana_man/CMakeLists.txt
+++ b/banana_man/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(bmanlib
     bmanlib/bman/bman.cpp
+    bmanlib/bman/banana_blaster.cpp
     bmanlib/game/game.cpp
     bmanlib/platforms/platform.cpp
     bmanlib/platforms/grid.cpp
