can make bigger maps now but its super buggy

--- a/banana_man/CMakeLists.txt
+++ b/banana_man/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(bmanlib
     bmanlib/platforms/platform.cpp
     bmanlib/platforms/grid.cpp
     bmanlib/enemies/ants.cpp
+    bmanlib/map/map.cpp
 )
 
 find_package(raylib 3.0 REQUIRED)
