adding ant bullets

--- a/banana_man/CMakeLists.txt
+++ b/banana_man/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(bmanlib
     bmanlib/game/game.cpp
     bmanlib/platforms/platform.cpp
     bmanlib/enemies/ants.cpp
+    bmanlib/enemies/antblaster.cpp
     bmanlib/map/map.cpp
 )
 
